Implement  email middleware for different scenarios such as welcome emails, password reset OTP emails, and donation thank you emails.
